...
        android:hint="@string/phone_number"
        app:layout_constraintBottom_toTopOf="@+id/cbIncognito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/glVertical">
        
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtPhone"
            style="@style/SignIn.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    
    </android.support.design.widget.TextInputLayout>
    
    <android.support.design.widget.TextInputLayout
        android:id="@+id/edtCountryLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/general_x_small"
        android:layout_marginStart="@dimen/general_xx_large"
        android:hint="@string/country"
        app:layout_constraintBottom_toBottomOf="@+id/edtPhoneLayout"
...
