<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_ok"
        android:icon="@drawable/svg_done"
        android:title="@string/btn_ok"
        app:showAsAction="always"/>

</menu>